kubernetes/apps/storage/longhorn/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  namespace: storage
  annotations:
    external-dns.home.arpa/enabled: "true"
    authentik.home.arpa/enabled: "true"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: longhorn.png
    gethomepage.dev/name: Longhorn
    gethomepage.dev/group: Infrastructure
    hajimari.io/icon: mdi:harddisk
    hajimari.io/group: infrastructure
spec:
  ingressClassName: nginx
  rules:
    - host: &host "longhorn.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
  tls:
    - hosts:
        - *host
